# VideoProcessingLibrary

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/kucherenkoihor/videoprocessinglibrary/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/kucherenkoihor/videoprocessinglibrary/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/kucherenkoihor/videoprocessinglibrary/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
vpl/: CMakeLists.txt  build.gradle
vpl/src/androidTest/java/com/kucherenkoihor/vpl/: ExampleInstrumentedTest.java
vpl/src/main/: AndroidManifest.xml
vpl/src/main/cpp/: vpl.cpp
vpl/src/main/java/com/kucherenkoihor/vpl/: VideoProcessing.java
vpl/src/main/res/values/: strings.xml
vpl/src/test/java/com/kucherenkoihor/vpl/: ExampleUnitTest.java
